LOG4J2-282 - Allow the default status level to be specified as a system property.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1500212 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/xdoc/manual/configuration.xml.vm
+++ b/src/site/xdoc/manual/configuration.xml.vm
@@ -880,7 +880,8 @@ public class Bar {
           </p>
           <p>
             When configuring Log4j it is sometimes necessary to view the generated status events. This can be
-            accomplished by adding the status attribute to the configuration element. The following
+            accomplished by adding the status attribute to the configuration element or a default value can be
+            provided by setting the "Log4jDefaultStatusLevel" system property. The following
             configuration has the status attribute set to debug.
 
 <pre class="prettyprint linenums"><![CDATA[<?xml version="1.0" encoding="UTF-8"?>;
