--- a/src/site/xdoc/manual/configuration.xml.vm
+++ b/src/site/xdoc/manual/configuration.xml.vm
@@ -834,7 +834,7 @@ public class Bar {
           <p>
             A default property map can be declared in the configuration file. If the value cannot be located in
             the specified lookup the value in the default property map will be used. The default map is
-            pre-populated with a value for "hostName" that is the current system's host name or ip address and
+            pre-populated with a value for "hostName" that is the current system's host name or IP address and
             the "contextName" with is the value of the current logging context.
           </p>
           <p>
