--- a/src/site/xdoc/manual/configuration.xml.vm
+++ b/src/site/xdoc/manual/configuration.xml.vm
@@ -430,16 +430,16 @@ public class Bar {
     <property name="name1">value</property>
     <property name="name2" value="value2"/>
   </properties>
-  <filter type="type" ... />
+  <Filter type="type" ... />
   <appenders>
     <appender type="type" name="name">
-      <filter type="type" ... />
+      <Filter type="type" ... />
     </appender>
     ...
   </appenders>
   <loggers>
     <logger name="name1">
-      <filter type="type" ... />
+      <Filter type="type" ... />
     </logger>
     ...
     <root level="level">
@@ -457,21 +457,21 @@ public class Bar {
   <properties>
     <property name="filename">target/test.log</property>
   </properties>
-  <filter type="ThresholdFilter" level="trace"/>
+  <Filter type="ThresholdFilter" level="trace"/>
 
   <appenders>
     <appender type="Console" name="STDOUT">
       <layout type="PatternLayout" pattern="%m MDC%X%n"/>
       <filters>
-        <filter type="MarkerFilter" marker="FLOW" onMatch="DENY" onMismatch="NEUTRAL"/>
-        <filter type="MarkerFilter" marker="EXCEPTION" onMatch="DENY" onMismatch="ACCEPT"/>
+        <Filter type="MarkerFilter" marker="FLOW" onMatch="DENY" onMismatch="NEUTRAL"/>
+        <Filter type="MarkerFilter" marker="EXCEPTION" onMatch="DENY" onMismatch="ACCEPT"/>
       </filters>
     </appender>
     <appender type="Console" name="FLOW">
       <layout type="PatternLayout" pattern="%C{1}.%M %m %ex%n"/><!-- class & line number -->
       <filters>
-        <filter type="MarkerFilter" marker="FLOW" onMatch="ACCEPT" onMismatch="NEUTRAL"/>
-        <filter type="MarkerFilter" marker="EXCEPTION" onMatch="ACCEPT" onMismatch="DENY"/>
+        <Filter type="MarkerFilter" marker="FLOW" onMatch="ACCEPT" onMismatch="NEUTRAL"/>
+        <Filter type="MarkerFilter" marker="EXCEPTION" onMatch="ACCEPT" onMismatch="DENY"/>
       </filters>
     </appender>
     <appender type="File" name="File" fileName="${filename}">
@@ -485,7 +485,7 @@ public class Bar {
 
   <loggers>
     <logger name="org.apache.logging.log4j.test1" level="debug" additivity="false">
-      <filter type="ThreadContextMapFilter">
+      <Filter type="ThreadContextMapFilter">
         <KeyValuePair key="test" value="123"/>
       </filter>
       <AppenderRef ref="STDOUT"/>
