--- a/src/site/xdoc/manual/layouts.xml.vm
+++ b/src/site/xdoc/manual/layouts.xml.vm
@@ -39,6 +39,59 @@
           <a href="http://download.oracle.com/javase/6/docs/api/java/nio/charset/Charset.html">Charset</a> to
           insure the byte array contains correct values.
         </p>
+        <a name="JSONLayout"/>
+        <subsection name="JSONLayout">
+          <!-- From Javadoc of org.apache.logging.log4j.core.layout.JSONLayout -->
+          <p>
+          Appends a series of JSON events as strings serialized as bytes..
+          </p>
+          <h4>Complete well-formed JSON vs. fragment JSON</h4>
+          <p>
+          If you configure <code>complete="true"</code>, the appender outputs a well-formed JSON document. By default, 
+          with <code>complete="false"</code>, you should include the output as an <em>external file</em> in a 
+          separate file to form a well-formed JSON document.
+          </p>
+          <p>
+          A well-formed JSON document follows this pattern:
+          </p>
+          <pre class="prettyprint linenums">[
+  {
+    "logger":"com.foo.Bar",
+    "timestamp":"1376681196470",
+    "level":"INFO",
+    "thread":"main",
+    "message":"Message flushed with immediate flush=true"
+  },
+  {
+    "logger":"com.foo.Bar",
+    "timestamp":"1376681196471",
+    "level":"ERROR",
+    "thread":"main",
+    "message":"Message flushed with immediate flush=true",
+    "throwable":"java.lang.IllegalArgumentException: badarg\\n\\tat org.apache.logging.log4j.core.appender.JSONCompleteFileAppenderTest.testFlushAtEndOfBatch(JSONCompleteFileAppenderTest.java:54)\\n\\tat sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\\n\\tat sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)\\n\\tat sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\\n\\tat java.lang.reflect.Method.invoke(Method.java:606)\\n\\tat org.junit.runners.model.FrameworkMethod$1.runReflectiveCall(FrameworkMethod.java:47)\\n\\tat org.junit.internal.runners.model.ReflectiveCallable.run(ReflectiveCallable.java:12)\\n\\tat org.junit.runners.model.FrameworkMethod.invokeExplosively(FrameworkMethod.java:44)\\n\\tat org.junit.internal.runners.statements.InvokeMethod.evaluate(InvokeMethod.java:17)\\n\\tat org.junit.runners.ParentRunner.runLeaf(ParentRunner.java:271)\\n\\tat org.junit.runners.BlockJUnit4ClassRunner.runChild(BlockJUnit4ClassRunner.java:70)\\n\\tat org.junit.runners.BlockJUnit4ClassRunner.runChild(BlockJUnit4ClassRunner.java:50)\\n\\tat org.junit.runners.ParentRunner$3.run(ParentRunner.java:238)\\n\\tat org.junit.runners.ParentRunner$1.schedule(ParentRunner.java:63)\\n\\tat org.junit.runners.ParentRunner.runChildren(ParentRunner.java:236)\\n\\tat org.junit.runners.ParentRunner.access$000(ParentRunner.java:53)\\n\\tat org.junit.runners.ParentRunner$2.evaluate(ParentRunner.java:229)\\n\\tat org.junit.internal.runners.statements.RunBefores.evaluate(RunBefores.java:26)\\n\\tat org.junit.runners.ParentRunner.run(ParentRunner.java:309)\\n\\tat org.eclipse.jdt.internal.junit4.runner.JUnit4TestReference.run(JUnit4TestReference.java:50)\\n\\tat org.eclipse.jdt.internal.junit.runner.TestExecution.run(TestExecution.java:38)\\n\\tat org.eclipse.jdt.internal.junit.runner.RemoteTestRunner.runTests(RemoteTestRunner.java:467)\\n\\tat org.eclipse.jdt.internal.junit.runner.RemoteTestRunner.runTests(RemoteTestRunner.java:683)\\n\\tat org.eclipse.jdt.internal.junit.runner.RemoteTestRunner.run(RemoteTestRunner.java:390)\\n\\tat org.eclipse.jdt.internal.junit.runner.RemoteTestRunner.main(RemoteTestRunner.java:197)\\n"
+  }
+]
+</pre>
+          <p>
+          If <code>complete="false"</code>, the appender does not write the JSON open array character "[" at the start 
+          of the document. and "]" and the end.
+          </p>
+          <p>
+          This approach enforces the independence of the JSONLayout and the appender where you embed it.
+          </p>
+          <h4>Encoding</h4>
+          <p>
+          Appenders using this layout should have their <code>charset</code> set to <code>UTF-8</code> or 
+          <code>UTF-16</code>, otherwise events containing non ASCII characters could result in corrupted log files.
+          </p>
+          <h4>Pretty vs. compact XML</h4>
+          <p>
+          By default, the JSON layout is not compact (a.k.a. not "pretty") with <code>compact="false"</code>, which 
+          means the appender uses end-of-line characters and indents lines to format the text. If 
+          <code>compact="true"</code>,  then no end-of-line or indentation is used. Message content may contain, 
+          of course, escaped end-of-lines.
+          </p>
+        </subsection>
         <a name="HTMLLayout"/>
         <subsection name="HTMLLayout">
           <p>The HTMLLayout generates an HTML page and adds each LogEvent to a row in a table.
