--- a/src/site/xdoc/manual/layouts.xml.vm
+++ b/src/site/xdoc/manual/layouts.xml.vm
@@ -689,11 +689,11 @@ WARN  [main]: Message 2</pre>
                 </p>
                 <p>
                   For example:
-                  <pre>level{WARN=Warning, DEBUG=Debug, ERROR=Error, TRACE=Trace, INFO=Info}</pre>
+                  <pre>%level{WARN=Warning, DEBUG=Debug, ERROR=Error, TRACE=Trace, INFO=Info}</pre>
                 </p>
                 <p>
                   Alternatively, for the compact-minded:
-                  <pre>level{WARN=W, DEBUG=D, ERROR=E, TRACE=T, INFO=I}</pre>
+                  <pre>%level{WARN=W, DEBUG=D, ERROR=E, TRACE=T, INFO=I}</pre>
                 </p>
               </td>
             </tr>
