[lOG4J2-415] Format log event time as UNIX time (seconds or milliseconds).
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1528503 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/xdoc/manual/layouts.xml.vm
+++ b/src/site/xdoc/manual/layouts.xml.vm
@@ -359,7 +359,24 @@ WARN  [main]: Message 2</pre>
                       <td>%d{HH:mm:ss}{GMT+0}</td>
                       <td>18:34:02,781</td>
                     </tr>
+                    <tr>
+                      <td>%d{UNIX}</td>
+                      <td>1351866842</td>
+                    </tr>
+                    <tr>
+                      <td>%d{UNIX_MILLIS}</td>
+                      <td>1351866842781</td>
+                    </tr>
                   </table>
+                </p>
+                <p>
+                  %d{UNIX} outputs the UNIX time in seconds. %d{UNIX_MILLIS} outputs the UNIX time in milliseconds. 
+                  The UNIX time is the difference, in seconds for UNIX and in milliseconds for UNIX_MILLIS, between
+                  the current time and midnight, January 1, 1970 UTC. While the time unit is milliseconds, the 
+                  granularity depends on the operating system 
+                  (<a href="http://msdn.microsoft.com/en-us/windows/hardware/gg463266.aspx">Windows</a>). 
+                  This is an efficient way to output the event time because only a conversion from long to String 
+                  takes place, there is no Date formatting involved.
                 </p>
               </td>
             </tr>
